package Cmd;

import "prototype.proto";
import "pvptype.proto";

/**
 *  @brief  pvp(rt)/pvp(ai)等相关的功能系统协议都放在该proto文件中,具体战斗协议放在fight.proto中
 */


enum EBattleType
{
    BATTLE_TYPE_PVP 			= 1; 	// pvp
    BATTLE_TYPE_GVE             = 2; 	// gve
}

message PvpMatchReq
{
    optional EMessageID 		id 			= 1 [default = PVP_MATCH_CS];
	optional uint32 			heroid 		= 2;
	optional EBattleType        type        = 3;
}

message PvpMatchRet
{
    optional EMessageID 		id          = 1 [default = PVP_MATCH_SC];
    optional bytes              svrip       = 2; // pvp服务器ip
    optional int32              svrport     = 3; // pvp服务器端口
    optional uint32             tempid      = 4; // 临时id
	optional uint64 			svrtime 	= 5; // 服务器时间
}

message PvpMatchCancel
{
    optional EMessageID 		id 			= 1 [default = PVP_MATCH_CANCEL_CS];
}

message PvpMatchCancelRet
{
    optional EMessageID 		id 			= 1 [default = PVP_MATCH_CANCEL_SC];
}
